# BSU-OS

lab1-2/: Task.doc
lab1-2. Static&Dinamic Libs/for linux/: main.cpp
lab1-2. Static&Dinamic Libs/for linux/Vector/: Vector.h
lab1-2. Static&Dinamic Libs/for windows/Number/: Number.h
lab1-2/for linux/: script
lab1-2/for windows/lab/: CMakeLists.txt
lab1-2/for windows/lab/Number/: Number.cpp
lab1-2/for windows/lab/Vector/: Vector.cpp
lab3/: buffered_channel.h
lab3. Buffered Channel/: main.cpp
lab4/for linux/: main.cpp
lab5-6/: Task.doc
lab5-6. Processes/for linux/: killer.cpp  process_func.h
lab5-6/for linux/: user.cpp
lab7/: main.cpp
